syntax = "proto3";
package wire.activate;

/*
 * Once the escrow transaction has posted on the payment network, the customer attempts to
 * activate the channel, which is a single request.
 */

message Request {
    bytes channel_id = 1;
    bytes nonce = 2;
    bytes revocation_lock = 3;
    bytes customer_balance = 4;
    bytes merchant_balance = 5;
}

message Reply {
    bytes payment_tag = 1;
}